[#66078552] Explicitly show headers to avoid flicker

--- a/productview.less
+++ b/productview.less
@@ -10,6 +10,9 @@ ul.slider div.add-fave {
   display: none !important;
 }
 
+#collection-menu-passementerie-inactive,
+#collection-menu-leather-inactive,
+#collection-menu-main-inactive,
 #products,
 #collection-menu-main,
 #collection-menu-project-list,
